--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
 
 /*================= SECTION HEAD ===================== */
+/*================= SECTION HEAD ===================== */
+/*================= SECTION HEAD ===================== */
 body
 {
 	font-family: 'Roboto';
@@ -85,4 +87,26 @@ div.navbar-text > span
 	text-align: right;
 	color: white;
 }
-/*=============================================== */
+
+/*================= SECTION DIRECTION ===================== */
+/*================= SECTION DIRECTION ===================== */
+/*================= SECTION DIRECTION ===================== */
+.direction
+{
+	background-image: url(../img/direction.png);
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+}
+.direction h1
+{
+	margin-top: 65px;
+	color: #27bbee;
+	font-weight: 500;
+	font-size: 62px;
+}
+.direction > .row p
+{
+	width: 32rem;
+}
