--- a/app/css/icons.css
+++ b/app/css/icons.css
@@ -1,12 +1,15 @@
 i.icon-global
 {
+	text-align: center;
 	display: block;
 	position: relative;
 	margin-top: 10px;
 	width: 100px;
-	height: 50px;
-	background-size: 70px;
+	height: 100px;
 	background-repeat: no-repeat;
+	padding: 0;
+	margin-top: 20px;
+	left: 20%;
 }
 i.icon-delivery-truck
 {
