--- a/app/css/main.css
+++ b/app/css/main.css
@@ -97,12 +97,33 @@ div.navbar-text > span
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 100vh;
+	height: 1000px;
 }
 .direction h1
 {
-	margin-top: 65px;
+	margin-top: 120px;
 	color: #27bbee;
 	font-weight: 500;
 	font-size: 62px;
 }
+/*================= SECTION DIRECTION LIST ===================== */
+/*================= SECTION DIRECTION LIST  ===================== */
+/*================= SECTION DIRECTION LIST  ===================== */
+.direction-list
+{
+	background-image: url(../img/direction_list.png);
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+}
+.direction-list h1
+{
+	margin-top: 120px;
+	color: #27bbee;
+	font-weight: 500;
+	font-size: 62px;
+}
+/*================= SECTION DIRECTION LIST ===================== */
+/*================= SECTION DIRECTION LIST  ===================== */
+/*================= SECTION DIRECTION LIST  ===================== */
