--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5,6 +5,7 @@
 /*================= SECTION HEAD ===================== */
 /*================= SECTION HEAD ===================== */
 /*================= SECTION HEAD ===================== */
+
 body
 {
 	font-family: 'Roboto';
@@ -13,6 +14,7 @@ body
 }
 .head
 {
+
 	background-image: url(../img/header.png);
 	background-position: center top;
 	background-repeat: no-repeat;
@@ -97,7 +99,7 @@ div.navbar-text > span
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 1000px;
+	height: auto;
 }
 .direction h1
 {
@@ -109,20 +111,44 @@ div.navbar-text > span
 /*================= SECTION DIRECTION LIST ===================== */
 /*================= SECTION DIRECTION LIST  ===================== */
 /*================= SECTION DIRECTION LIST  ===================== */
-.direction-list
+.list
 {
+	margin: 120px auto;
 	background-image: url(../img/direction_list.png);
 	background-position: top center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 100vh;
+	height: 965px;
 }
-.direction-list h1
+.list h1
 {
-	margin-top: 120px;
-	color: #27bbee;
+	margin-top: 150px;
+	color: white;
 	font-weight: 500;
 	font-size: 62px;
+}
+.list h2
+{
+	font-size: 38px;
+	color: white;
+}
+.list li
+{
+	padding: 15px;
+	list-style-type: square;
+	color: white;
+	font-size: 24px;
+}
+.services
+{
+	margin: 50px auto;
+}
+.form-btn
+{
+	border-radius: 0;
+	border-width: 3px;
+	padding: 10px 50px;
+	margin: 50px auto;
 }
 /*================= SECTION DIRECTION LIST ===================== */
 /*================= SECTION DIRECTION LIST  ===================== */
