--- a/app/css/main.css
+++ b/app/css/main.css
@@ -344,4 +344,24 @@ a.navbar-brand
 		font-size: 18px;
 		padding: 5px;
 	}
+	.active-small
+	{
+		font-size: 1.8em;
+	}
+}
+@media (max-width: 1093px) {
+
+	.contact-menu
+	{
+		margin-left: 15px;
+		margin-right: 0px;
+	}
+	.icon-style
+	{
+	margin-right: 5px;
+	}
+	.footer span
+	{
+		font-size: 18px;
+	}
 }
