--- a/app/css/main.css
+++ b/app/css/main.css
@@ -256,23 +256,63 @@ a.navbar-brand
 }
 .footer ul 
 {
+	padding: 0;
 	margin-top: 20px;
-	margin-right: 30px;
 }
 .footer ul li
 {
-	margin-right: 20px;
 	font-size: 14px;
 	text-align: right;
 	list-style:none;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	margin: 10px auto;
+	padding: 
 }
 .footer ul li:first-child
 {
-	font-size: 18px;
+	font-size: 14px;
+	font-weight: 500;
 	text-transform: none;
 	margin-bottom: 20px;
+	text-transform: uppercase;
+}
+.footer-menu li:first-child:after
+{
+	content: "";
+	position: absolute;
+	right: 0;
+	margin-top: 10px;
+	display: block;
+	width: 80px;
+	border-top: 2px dashed #27bbee;
+}
+li.footer-contact-list
+{
+	margin-top: 15px !important;
+	text-align: left !important;
+}
+li.footer-contact-list:first-child
+{
+	text-align: left;
+}
+li.footer-contact-list:first-child:after
+{
+	content: "";
+	position: absolute;
+	left: 0;
+	margin-top: 10px;
+	display: block;
+	width: 90px;
+	border-top: 2px dashed #27bbee;
+}
+li.footer-contact-list span
+{
+	text-align: left !important;
+	margin: 0;
+	padding: 0;
+	font-size: 14px;
+	text-transform: none;
+	font-weight: 400;
 }
 @media (max-width: 992px) {
   .text-logo {
@@ -347,6 +387,41 @@ a.navbar-brand
 	.active-small
 	{
 		font-size: 1.8em;
+	}
+	li.footer-contact-list span
+	{
+		text-align: center;
+	}
+	li.footer-contact-list:first-child
+	{
+		display: block;
+		width: 80px;
+		margin-left: 50% !important;
+		transform: translateX(-50%);
+	}
+	li.footer-contact-list
+	{
+		display: inline-block;
+		margin: 10px 10px !important;
+	}
+	ul.footer-menu-small
+	{
+		text-align: center;
+	}
+
+	li.footer-contact-list:first-child:after
+	{
+		content: "";
+		margin-top: 10px;
+		display: block;
+		position: relative;
+		left: -8px;
+		width: 90px;
+		border-top: 2px dashed #27bbee;
+	}
+	.small-center
+	{
+		text-align: center !important;
 	}
 }
 @media (max-width: 1093px) {
