--- a/app/css/main.css
+++ b/app/css/main.css
@@ -25,17 +25,18 @@ hr
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100vh;
+	min-height: 500px;
 }
 .bg-color-menu
 {
-	background: rgba(27, 46, 78, .39);
+	background: rgba(0, 0, 0, .37);
 }
 a.nav-link,
 a.navbar-brand
 {
 		color: white !important;
 		font-family: 'Roboto';
-		font-size: 18px;
+		font-size: 16px;
 		font-weight: 300;
 }
 .navbar-nav li
@@ -49,12 +50,13 @@ a.navbar-brand
 /* mail and phone*/
 .contact-menu
 {
+	font-size: 16px;
 	margin-left: 40px;
 	margin-right: 20px;
 }
 .icon-style
 {
-	color: rgba(27, 46, 78, .69);;
+	color: #5dd6ff;
 	margin-right: 10px;
 }
 
@@ -77,7 +79,7 @@ a.navbar-brand
 	width: auto;
 	height: 108px;
 	background-image: url(../img/logo.png);
-	background-size: 400px;
+	background-size: 350px;
 	background-repeat: no-repeat;
 	margin-top: 100px;
 }
@@ -85,12 +87,17 @@ a.navbar-brand
 .btn-style
 {
 	border: 4px solid rgb(37,188,239);
-	padding: 20px 30px 20px 30px;
-	text-transform: lowercase;
+	padding: 10px 30px 10px 30px;
+	text-transform: uppercase;
 	font-weight: 500;
 	border-radius: 0;
-	font-size: 22px;
+	font-size: 18px;
 	color: #254266;
+}
+.btn-style:hover
+{
+	background: rgb(37,188,239);
+	color: white;
 }
 /* Text-logo*/
 .text-logo
@@ -340,11 +347,11 @@ li.footer-contact-list span
 	.btn-style
 	{
 		border: 4px solid rgb(37,188,239);
-		padding: 20px 30px 20px 30px;
-		text-transform: lowercase;
+		padding: 10px 30px 10px 30px;
+		text-transform: uppercase;
 		font-weight: 500;
 		border-radius: 0;
-		font-size: 20px;
+		font-size: 18px;
 		color: #254266;
 	}
 	.btn-center
