--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,15 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
 }
-
-
-/*================= SECTION HEAD ===================== */
-/*================= SECTION HEAD ===================== */
-/*================= SECTION HEAD ===================== */
-html
-{
-	overflow:  hidden !important;
-}
 body
 {
 	font-family: 'Roboto';
@@ -18,6 +9,62 @@ body
 	font-size: 18px;
 
 }
+/*================= PRELOADER ===================== */
+/*================= PRELOADER ===================== */
+/*================= PRELOADER ===================== */
+.isset:after
+{
+	content: "";
+	display: block;
+	position: relative;
+	top: 75%;
+	left: 54%;
+	width: 100px;
+	height: 4px;
+	background: rgb(37,188,239);
+}
+.preloader
+{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #fff;
+	z-index: 9999;
+	visibility: visible;
+	opacity: 1;
+	transition: .2s;
+}
+.loader
+{
+	position: absolute;
+	width: 350px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.loader-progress
+{
+	position: relative;
+	left: 50%;
+}
+.logo-preload
+{
+	width: auto;
+	height: 108px;
+	background-image: url(../img/logo.png);
+	background-size: 350px;
+	background-repeat: no-repeat;
+}
+.done
+{
+	opacity: 0;
+	visibility: hidden;
+}
+/*================= SECTION HEAD ===================== */
+/*================= SECTION HEAD ===================== */
+/*================= SECTION HEAD ===================== */
 hr
 {
 	display: none;
@@ -133,6 +180,10 @@ a.navbar-brand
 	color: #27bbee;
 	font-weight: 400;
 	font-size: 62px;
+}
+.block-hover
+{
+	transition: 0.2s background;
 }
 .block-hover:hover
 {
